<resources>

    <string name="app_name">Sunka</string>

    <string name="action_settings">Settings</string>

    <string name="singlePlayer_Button">Single Player</string>
    <string name="playLocal_Button">Local Multiplayer</string>
    <string name="playOther_Button">Online Multiplayer</string>
    <string name="statistics_Button">Player Statistics</string>

    <string name="player1_Text">Player 1:</string>
    <string name="typePlayer1_HintText">Type Player 1 Name</string>
    <string name="player2_Text">Player 2:</string>
    <string name="typePlayer2_HintText">Type Player 2 Name</string>
    <string name="confirm_Button">Confirm</string>

    <string name="typeOnline_HintText">Type Your Online Name</string>
    <string name="submit_button">Submit</string>
    <string name="title_activity_game__board">Game_Board</string>
	
    <string name="blank"></string>
    <string name="start">4</string>
    <string name="home_start">0</string>

    <string name="statistics_Name">Player Name</string>
    <string name="ranking_Position">Ranking Position</string>
    <string name="won_Times">Won</string>
    <string name="lost_Times">Lost</string>
    <string name="higher_Score">Higher Score</string>
    <string name="time_Move">Average Time to make a move/sec</string>
    <string name="average_Time">Average Time to Win / min</string>

    <string name="statistic_playerName"></string>
    <string name="statistic_playerName2"></string>
    <string name="first_WinSlot"></string>
    <string name="second_WinSlot"></string>
    <string name="first_LoseSlot"></string>
    <string name="second_LoseSlot"></string>
    <string name="first_HsSlot"></string>
    <string name="second_HsSlot"></string>
    <string name="first_RankingSlot"></string>
    <string name="second_RankingSlot"></string>
    <string name="first_timeWSlot"></string>
    <string name="second_timeWSlot"></string>
    <string name="first_timeMakeMove"></string>
    <string name="second_timeMakeMove"></string>

    <string name="Options">Options</string>
    <string name="dialog_Winner"></string>
    <string name="dialog_WinnerText">WINNER: </string>

    <string name="rematch_Option">Rematch</string>
    <string name="statistics_Option">Statistics</string>
    <string name="exit_Option">Exit</string>
    <string name="button_host">Host</string>
    <string name="button_join">Join</string>
    <string name="submit_join">Join</string>
    <string name="submit_host">Host</string>

</resources>
