<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.teamhawk.sunka.OnlinePlayerNamingFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/player1_Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:gravity="center"
            android:text="@string/player1_Text"
            android:textColor="#000000"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/player1Name_Edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/typePlayer1_HintText"
            android:singleLine="true"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/player2_Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/player2_Text"
            android:textColor="#000000"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/player2Name_Edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/typePlayer2_HintText"
            android:singleLine="true"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal">

        //TODO: replace button with submit from fragment_player_naming_online.xml
        <Button
            android:id="@+id/confirm_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/submit_button" />

    </LinearLayout>

</LinearLayout>
