<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/options_Button"
        android:layout_width="39dp"
        android:layout_height="20dp"
        android:layout_gravity="right"
        android:text="@string/Options" />

    <Chronometer
        android:id="@+id/chronometer1"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_gravity="left" />

    <TextView
        android:id="@+id/player2_Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/player2_Text"
        android:textColor="#000000"
        android:textStyle="italic" />

    <include layout="@layout/layout_sunka_board_old"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"/>

    <Chronometer
        android:id="@+id/chronometer2"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"

        />

    <TextView
        android:id="@+id/player1_Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/player1_Text"
        android:textColor="#000000" />

</LinearLayout>
